# get-chem-done

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
infra/: gcd-conventions.json  gcd-protocols.json  gcd-state.json
src/gcd/: __init__.py  contracts.py
src/gcd/agents/: gcd-analyst.md  gcd-bibliographer.md  gcd-consistency-checker.md  gcd-debugger.md  gcd-executor.md  gcd-paper-writer.md  gcd-planner.md  gcd-referee.md  gcd-researcher.md  gcd-verifier.md
src/gcd/commands/: branch-hypothesis.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md
src/gcd/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  observability.py  phases.py  state.py
src/gcd/hooks/: statusline.py
src/gcd/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/gcd/specs/references/orchestration/: agent-delegation.md
src/gcd/specs/references/protocols/: dft-workflow-protocols.md  docking-protocols.md  md-protocols.md
src/gcd/specs/references/verification/: llm-chem-errors.md
