[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-chem-done"
version = "0.1.0"
description = "AI copilot for autonomous computational chemistry research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["computational-chemistry", "ai", "research", "dft", "molecular-dynamics", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-chem-done"
Repository = "https://github.com/JesseRWeigel/get-chem-done"
Issues = "https://github.com/JesseRWeigel/get-chem-done/issues"

[project.scripts]
gcd = "gcd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gcd"]
